--- a/package.json
+++ b/package.json
@@ -14,23 +14,25 @@
   "description": "",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "jsonwebtoken": "^9.0.2",
     "mysql": "^2.18.1",
     "reflect-metadata": "^0.2.2",
-    "typeorm": "^0.3.20",
-    "ts-node": "^10.9.2"
+    "ts-node": "^10.9.2",
+    "typeorm": "^0.3.20"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
+    "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^22.7.4",
-    "typeorm": "^0.3.20",
-    "typescript": "^5.6.2",
     "ts-node-dev": "^2.0.0",
-    "tsconfig-paths": "^3.11.0"
+    "tsconfig-paths": "^3.11.0",
+    "typeorm": "^0.3.20",
+    "typescript": "^5.6.2"
   },
   "resolutions": {
     "@types/express": "^4.17.13"
